# Recordify

./: PROJECT_STRUCTURE.md  README.md  build_demo.bat  log.txt  makefile
hani_screen_shot/: CMakeLists.txt  OpenCV_MinGW_Setup_Guide.txt  full_screen.cpp  screen_shot_1.cpp  screen_shot_2.cpp  video-generator.cpp
include/audio_handler/: audio_capture.h
include/core/: application.h  recorder.h
include/screen_handler/: screen_capture.h  screen_handler.h  screen_reader.h  screen_writer.h
include/utils/: geometry.h
src/audio_handler/: audio_capture.cpp
src/core/: application.cpp  main.cpp  recorder.cpp
src/screen_handler/: screen_capture.cpp  screen_handler.cpp  screen_reader.cpp  screen_writer.cpp
tests/core/: recorder_test.cpp
tests/unit/: screen_capture_test.cpp
